fix flashing news/warning readability, optimize basket jam with kaboom.js

--- a/src/rat_bushwick.html
+++ b/src/rat_bushwick.html
@@ -416,13 +416,18 @@
         }
 
         .warning {
-            background: #ff006e;
-            color: #000;
-            padding: 15px;
+            background: #2a1810;
+            color: #ffbe0b;
+            padding: 20px;
             margin: 20px 0;
             border: 2px solid #ffbe0b;
+            border-radius: 8px;
+            font-family: 'Arial', 'Helvetica', sans-serif;
             font-weight: bold;
-            animation: blink 0.5s infinite;
+            font-size: 1.1em;
+            line-height: 1.4;
+            text-align: center;
+            box-shadow: 0 4px 8px rgba(255, 190, 11, 0.2);
         }
 
         .mobile-game-controls {
@@ -537,16 +542,16 @@
         </div>
 
         <!-- Breaking News Bulletin -->
-        <div class="breaking-news" style="background: #1a1a2e; color: #00ff9f; padding: 25px; margin: 20px 0; border: 2px solid #ff006e; border-radius: 8px; box-shadow: 0 0 15px rgba(255, 0, 110, 0.3);">
-            <div style="text-align: center; font-size: 1.3em; margin-bottom: 15px; color: #ff006e; text-shadow: 0 0 8px rgba(255, 0, 110, 0.5);">🚨 BREAKING NEWS 🚨</div>
-            <div style="font-size: 1em; line-height: 1.4; margin-bottom: 12px;">
-                <strong>STARR STREET INFESTATION CRISIS:</strong> Residents report friendly rats "running right up to you" as Hunter Boone contracts giardia from rat exposure.
+        <div class="breaking-news" style="background: #1a1a2e; color: #e8e8e8; padding: 25px; margin: 20px 0; border: 2px solid #e74c3c; border-radius: 8px; box-shadow: 0 4px 8px rgba(231, 76, 60, 0.2); font-family: 'Georgia', 'Times New Roman', serif;">
+            <div style="text-align: center; font-size: 1.2em; margin-bottom: 15px; color: #e74c3c; font-weight: bold; font-family: 'Arial', 'Helvetica', sans-serif;">🚨 BREAKING NEWS 🚨</div>
+            <div style="font-size: 1em; line-height: 1.5; margin-bottom: 15px; font-family: 'Arial', 'Helvetica', sans-serif;">
+                <strong style="color: #f39c12;">STARR STREET INFESTATION CRISIS:</strong> Residents report friendly rats "running right up to you" as Hunter Boone contracts giardia from rat exposure.
             </div>
-            <div style="font-size: 0.95em; line-height: 1.3; margin-bottom: 12px;">
+            <div style="font-size: 0.95em; line-height: 1.4; margin-bottom: 15px; color: #bdc3c7; font-family: 'Arial', 'Helvetica', sans-serif;">
                 City conducts multiple inspections but residents demand more frequent extermination. Some throwing poison on sidewalks.
             </div>
-            <div style="font-size: 0.85em; text-align: center; color: #7ec8e3; border-top: 1px solid rgba(126, 200, 227, 0.3); padding-top: 10px;">
-                Last City Inspection: September 20th | Health Alert Level: <span style="color: #ff006e;">MAXIMUM</span>
+            <div style="font-size: 0.9em; text-align: center; color: #3498db; border-top: 1px solid rgba(52, 152, 219, 0.3); padding-top: 12px; font-family: 'Arial', 'Helvetica', sans-serif;">
+                Last City Inspection: September 20th | Health Alert Level: <strong style="color: #e74c3c;">MAXIMUM</strong>
             </div>
         </div>
 
