--- a/src/coffee-steam-viz.html
+++ b/src/coffee-steam-viz.html
@@ -184,7 +184,7 @@
     </style>
 </head>
 <body>
-    <a href="../index.html" class="home-link">← BACK TO TERMINAL</a>
+    <a href="../index.html" class="home-link">← BACK TO HOME</a>
 
     <div class="container">
         <h1>COFFEE IN SNOW</h1>
